; ModuleID = '/home/carl/AnghaBench/systemd/src/import/extr_qcow2-util.c_copy_cluster.c'
source_filename = "/home/carl/AnghaBench/systemd/src/import/extr_qcow2-util.c_copy_cluster.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@errno = common dso_local global i32 0, align 4
@EIO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i64, i32, i64, i64, i8*)* @copy_cluster to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @copy_cluster(i32 %0, i64 %1, i32 %2, i64 %3, i64 %4, i8* %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  %11 = alloca i64, align 8
  %12 = alloca i64, align 8
  %13 = alloca i8*, align 8
  %14 = alloca i64, align 8
  %15 = alloca i32, align 4
  store i32 %0, i32* %8, align 4
  store i64 %1, i64* %9, align 8
  store i32 %2, i32* %10, align 4
  store i64 %3, i64* %11, align 8
  store i64 %4, i64* %12, align 8
  store i8* %5, i8** %13, align 8
  %16 = load i32, i32* %8, align 4
  %17 = load i64, i64* %9, align 8
  %18 = load i32, i32* %10, align 4
  %19 = load i64, i64* %11, align 8
  %20 = load i64, i64* %12, align 8
  %21 = call i32 @btrfs_clone_range(i32 %16, i64 %17, i32 %18, i64 %19, i64 %20)
  store i32 %21, i32* %15, align 4
  %22 = load i32, i32* %15, align 4
  %23 = icmp sge i32 %22, 0
  br i1 %23, label %24, label %26

24:                                               ; preds = %6
  %25 = load i32, i32* %15, align 4
  store i32 %25, i32* %7, align 4
  br label %63

26:                                               ; preds = %6
  %27 = load i32, i32* %8, align 4
  %28 = load i8*, i8** %13, align 8
  %29 = load i64, i64* %12, align 8
  %30 = load i64, i64* %9, align 8
  %31 = call i64 @pread(i32 %27, i8* %28, i64 %29, i64 %30)
  store i64 %31, i64* %14, align 8
  %32 = load i64, i64* %14, align 8
  %33 = icmp slt i64 %32, 0
  br i1 %33, label %34, label %37

34:                                               ; preds = %26
  %35 = load i32, i32* @errno, align 4
  %36 = sub nsw i32 0, %35
  store i32 %36, i32* %7, align 4
  br label %63

37:                                               ; preds = %26
  %38 = load i64, i64* %14, align 8
  %39 = load i64, i64* %12, align 8
  %40 = icmp ne i64 %38, %39
  br i1 %40, label %41, label %44

41:                                               ; preds = %37
  %42 = load i32, i32* @EIO, align 4
  %43 = sub nsw i32 0, %42
  store i32 %43, i32* %7, align 4
  br label %63

44:                                               ; preds = %37
  %45 = load i32, i32* %10, align 4
  %46 = load i8*, i8** %13, align 8
  %47 = load i64, i64* %12, align 8
  %48 = load i64, i64* %11, align 8
  %49 = call i64 @pwrite(i32 %45, i8* %46, i64 %47, i64 %48)
  store i64 %49, i64* %14, align 8
  %50 = load i64, i64* %14, align 8
  %51 = icmp slt i64 %50, 0
  br i1 %51, label %52, label %55

52:                                               ; preds = %44
  %53 = load i32, i32* @errno, align 4
  %54 = sub nsw i32 0, %53
  store i32 %54, i32* %7, align 4
  br label %63

55:                                               ; preds = %44
  %56 = load i64, i64* %14, align 8
  %57 = load i64, i64* %12, align 8
  %58 = icmp ne i64 %56, %57
  br i1 %58, label %59, label %62

59:                                               ; preds = %55
  %60 = load i32, i32* @EIO, align 4
  %61 = sub nsw i32 0, %60
  store i32 %61, i32* %7, align 4
  br label %63

62:                                               ; preds = %55
  store i32 0, i32* %7, align 4
  br label %63

63:                                               ; preds = %62, %59, %52, %41, %34, %24
  %64 = load i32, i32* %7, align 4
  ret i32 %64
}

declare dso_local i32 @btrfs_clone_range(i32, i64, i32, i64, i64) #1

declare dso_local i64 @pread(i32, i8*, i64, i64) #1

declare dso_local i64 @pwrite(i32, i8*, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
